# CypherEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CmakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CypherCommon_Char_Bench.cpp  CypherCommon_String_Bench.cpp  CypherFileSystem_Path_Bench.cpp  CypherMemory_Bench.cpp  CypherPak_Bench.cpp
data/shaders/gl/: basic_color.frag  basic_color.vert
docs/: CYPHERENGINE_API_IMPLEMENTATION.md  CYPHERENGINE_API_REFERENCE.md  architecture.md  build_guide.md  coding_style.md  current_status.md  development_phases.md  engine_reference_style_notes.md  index.md  master_plan.md  project_structure.md  reference_engine_lessons.md  reference_policy.md  roadmap.md  subsystems.md  toolchain_plan.md
docs/devlog/: 2026-04.md
src/: main.cpp
src/CypherClient/: .gitkeep
src/CypherCommon/: CypherCommon.h
src/CypherCommon/Tier0/: CypherCommon_API.h  CypherCommon_Align.h  CypherCommon_Annotations.h  CypherCommon_Assert.h  CypherCommon_Atomic.h  CypherCommon_BaseTypes.h  CypherCommon_Bits.h  CypherCommon_BuildConfig.h  CypherCommon_BuildId.h  CypherCommon_CPUDetect.h  CypherCommon_CPUMonitoring.h  CypherCommon_CacheHints.h  CypherCommon_CommandLineBase.h  CypherCommon_Compiler.h  CypherCommon_Crash.h  CypherCommon_Debug.h  CypherCommon_Defines.h  CypherCommon_DynamicLibrary.h  CypherCommon_Endian.h  CypherCommon_Environment.h  CypherCommon_Error.h  CypherCommon_Handle.h  CypherCommon_Log.h  CypherCommon_LogToggle.h  CypherCommon_MemoryDebug.h  CypherCommon_MemoryOps.h  CypherCommon_MemoryTracker.h  CypherCommon_Minidump.h  CypherCommon_Module.h  CypherCommon_Mutex.h  CypherCommon_PageAllocator.h  CypherCommon_PerformanceCounter.h  CypherCommon_Platform.h  CypherCommon_PlatformMemory.h  CypherCommon_Process.h  CypherCommon_Profile.h  CypherCommon_ProgressBar.h  CypherCommon_Simd.h  CypherCommon_SourceLocation.h  CypherCommon_StackTrace.h  (+13 more)
src/CypherCommon/Tier1/: CypherCommon_Array.h  CypherCommon_ArrayView.h  CypherCommon_BinaryBlock.h  CypherCommon_BitBuffer.h  CypherCommon_BitReader.h  CypherCommon_BitWriter.h  CypherCommon_Blob.h  CypherCommon_BlockMemory.h  CypherCommon_Buffer.h  CypherCommon_ByteReader.h  CypherCommon_ByteWriter.h  CypherCommon_CallQueue.h  CypherCommon_Char.cpp  CypherCommon_Char.h  CypherCommon_CharacterSet.h  CypherCommon_ChecksumCRC32.h  CypherCommon_ChecksumCRC64.h  CypherCommon_Color.h  CypherCommon_CommandBuffer.h  CypherCommon_CommandLine.h  CypherCommon_CommandSystem.h  CypherCommon_Compression.h  CypherCommon_CompressionLZ.h  CypherCommon_CompressionLZ4.h  CypherCommon_CompressionZstd.h  CypherCommon_ConCommand.h  CypherCommon_ConVar.h  CypherCommon_Config.h  CypherCommon_ContentHash.h  CypherCommon_DataManager.h  CypherCommon_Delegate.h  CypherCommon_Dictionary.h  CypherCommon_Diff.h  CypherCommon_Event.h  CypherCommon_ExpressionEvaluator.h  CypherCommon_FileIo.h  CypherCommon_FixedArray.h  CypherCommon_FixedMemory.h  CypherCommon_FixedString.h  CypherCommon_Function.h  (+79 more)
src/CypherEditor/: .gitkeep
src/CypherEngine/CypherAI/: .gitkeep
src/CypherEngine/CypherAnimation/: .gitkeep
src/CypherEngine/CypherAudio/: .gitkeep
src/CypherEngine/CypherCVar/: CypherCVar.cpp  CypherCVar.h  CypherCVar_Error.h
src/CypherEngine/CypherCommand/: CypherCommand.cpp  CypherCommand.h  CypherCommand_Error.h
src/CypherEngine/CypherCommon/: CypherCommon.h  CypherCommon_Error.h  CypherCommon_Print.cpp  CypherCommon_Print.h
src/CypherEngine/CypherConfig/: CypherConfig.cpp  CypherConfig.h  CypherConfig_Error.h
src/CypherEngine/CypherConsole/: .gitkeep
src/CypherEngine/CypherEntity/: .gitkeep
src/CypherEngine/CypherFileSystem/: CypherFileSystem.cpp  CypherFileSystem.h  CypherFileSystem_Async.cpp  CypherFileSystem_Diagnostics.cpp  CypherFileSystem_Directory.cpp  CypherFileSystem_Discovery.cpp  CypherFileSystem_Error.h  CypherFileSystem_Mount.cpp  CypherFileSystem_Package.cpp  CypherFileSystem_Path.cpp  CypherFileSystem_Runtime.cpp  CypherFileSystem_Runtime.h  CypherFileSystem_Types.h  CypherFileSystem_Watch.cpp
src/CypherEngine/CypherHost/: CypherHost.cpp  CypherHost.h  CypherHost_Error.h  CypherHost_Types.h
src/CypherEngine/CypherInput/: .gitkeep
src/CypherEngine/CypherLog/: CypherLog.cpp  CypherLog.h  CypherLog_Error.h  CypherLog_Format.cpp  CypherLog_Format.h  CypherLog_Types.h
src/CypherEngine/CypherMath/: CypherMath_Bounds.cpp  CypherMath_Bounds.h  CypherMath_Frustum.cpp  CypherMath_Frustum.h  CypherMath_Mat.cpp  CypherMath_Mat.h  CypherMath_Plane.cpp  CypherMath_Plane.h  CypherMath_Quat.cpp  CypherMath_Quat.h  CypherMath_Ray.cpp  CypherMath_Ray.h  CypherMath_Types.h  CypherMath_Vec.cpp  CypherMath_Vec.h
src/CypherEngine/CypherMemory/: CypherMemory.cpp  CypherMemory.h  CypherMemory_Arena.cpp  CypherMemory_Arena.h  CypherMemory_Bucket.cpp  CypherMemory_Bucket.h  CypherMemory_Error.h  CypherMemory_Pool.cpp  CypherMemory_Pool.h  CypherMemory_Scratch.cpp  CypherMemory_Scratch.h  CypherMemory_Thread.cpp  CypherMemory_Thread.h
src/CypherEngine/CypherNetwork/: .gitkeep
src/CypherEngine/CypherPak/: CypherPak.h  CypherPak_Compression.cpp  CypherPak_Compression.h  CypherPak_Error.h  CypherPak_Format.h  CypherPak_Reader.cpp  CypherPak_Reader.h  CypherPak_Types.h  CypherPak_Writer.cpp  CypherPak_Writer.h
src/CypherEngine/CypherPhysics/: .gitkeep
src/CypherEngine/CypherPlatform/: .gitkeep
src/CypherEngine/CypherProfile/: .gitkeep
src/CypherEngine/CypherRender/: CypherRender.cpp  CypherRender.h  CypherRender_Camera.cpp  CypherRender_Camera.h  CypherRender_Config.h  CypherRender_Draw.cpp  CypherRender_Draw.h  CypherRender_Error.h  CypherRender_GL.cpp  CypherRender_GL.h  (+4 more)
src/CypherGame/: .gitkeep
src/CypherServer/: .gitkeep
src/CypherTools/: .gitkeep
tests/: CypherCommon_Tier0_Smoke.cpp  CypherCommon_Tier1_Char_Tests.cpp  CypherCommon_Tier1_String_Tests.cpp  CypherFileSystem_Smoke.cpp  CypherMemory_Smoke.cpp  CypherPak_Smoke.cpp
tools/CypherAssetCompiler/: .gitkeep
tools/CypherMapCompiler/: .gitkeep
tools/CypherResourceCompiler/: .gitkeep
tools/dev/: generate_clangd_compile_db.py
(+77 files in other folders)
